wasmer/include/wasm.h

    // Function Types

    WASM_DECLARE_TYPE(functype)

    WASM_API_EXTERN own wasm_functype_t *wasm_functype_new(
        own wasm_valtype_vec_t *params, own wasm_valtype_vec_t *results);
    WASM_API_EXTERN const wasm_valtype_vec_t *wasm_functype_params(const wasm_functype_t *);
    WASM_API_EXTERN wasm_externtype_t *wasm_functype_as_externtype(wasm_functype_t *);
    ///////////////////////////////////////////////////////////////////////////////
    // Runtime Objects

    // Values

    struct wasm_ref_t;
    WASM_API_EXTERN own wasm_table_t *wasm_table_new(
        wasm_store_t *, const wasm_tabletype_t *, wasm_ref_t *init);
    WASM_API_EXTERN wasm_table_size_t wasm_table_size(const wasm_table_t *);
    WASM_API_EXTERN bool wasm_table_grow(wasm_table_t *, wasm_table_size_t delta, wasm_ref_t *init);
    // Module Instances

    WASM_DECLARE_REF(instance)

    WASM_API_EXTERN own wasm_instance_t *wasm_instance_new(
        wasm_store_t *, const wasm_module_t *, const wasm_extern_vec_t *imports,
        own wasm_trap_t **);
    WASM_API_EXTERN void wasm_instance_exports(const wasm_instance_t *, own wasm_extern_vec_t *out);