wasmer/include/wasmer.h

int wasmer_last_error_length(void);
int wasmer_last_error_message(char *buffer, int length);
void wat2wasm(const wasm_byte_vec_t *wat, wasm_byte_vec_t *out);